--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ clean_twi_ner_env/
 
 
 .ipynb_checkpoints/
+models/xlmr_masakha_baseline/checkpoint-*/
+*.safetensors
+*.pth
+
 
 
 .DS_Store
@@ -25,6 +29,7 @@ data/raw/
 data/processed/*.csv
 data/processed/*.tsv
 data/processed/*.json
+data/masakha
 
 
 models/trained_model/
